--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
       <div class="wrapper">
         <div class="details">
           <div class="now-playing"></div>
-          <div class="track-art">
-            <div class="track-art-center"></div>
-          </div>
+          <div class="track-art"></div>
           <div class="track-name"></div>
           <div class="track-artist"></div>
         </div>
